InFlix/force-app/main/default/objects/Episode__c/fields/Length_min__c.field-meta.xml
<CustomField>
    <fullName>Length_min__c</fullName>
    <label>Length(min)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>