InFlix/force-app/main/default/objects/Episode__c/fields/TV_series__c.field-meta.xml
<CustomField>
    <fullName>TV_series__c</fullName>
    <label>TV series</label>
    <referenceTo>TV_Series__c</referenceTo>
    <relationshipLabel>Episodes</relationshipLabel>
    <relationshipName>Episodes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>