InFlix/force-app/main/default/objects/Episode__c/fields/Watched__c.field-meta.xml
<CustomField>
    <fullName>Watched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Watched</label>
    <type>Checkbox</type>
</CustomField>