InFlix/force-app/main/default/objects/Episode__c/validationRules/Length_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Length_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Length_min__c = 0</errorConditionFormula>
    <errorDisplayField>Length_min__c</errorDisplayField>
    <errorMessage>Length of the episode can&apos;t be 0, please change it.</errorMessage>
</ValidationRule>